# clipjar

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  UPGRADE_GUIDE.md  VERSION_WORKFLOW.md  build.sh  index.html  package-lock.json  package.json  release.sh  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
scripts/: build-installer.ps1  bump-version.cjs  generate-favicon.cjs  generate-ico.cjs  release-local.ps1  release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  database.rs  main.rs
src/components/ClipboardItem/: index.tsx
src/components/ClipboardList/: index.tsx
src/components/Header/: index.tsx
src/components/ItemRow/: index.tsx
src/components/Settings/: index.tsx
src/components/Sidebar/: index.tsx
src/components/TypeIcon/: index.tsx
src/hooks/: useClipboard.ts  useGlobalShortcut.ts
src/stores/: clipboardStore.ts
src/types/: index.ts
src/utils/: constants.ts  image.ts  index.ts
